--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,12 @@
             android:layout_height="60dp"
             android:src="@drawable/drawable_brush"/>
 
+        <ImageButton
+            android:id="@+id/ibUndo"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_undo"/>
+
     </LinearLayout>
 
 
